8349213: G1: Clearing bitmaps during collection set merging not claimed by region

Hi all,

  please review this change that makes (optional) bitmap clearing during merging remembered sets claim regions. Otherwise every thread will do the (currently little) work themselves over and over again.

Testing: tier1-3

Thanks,
  Thomas